feature: 游戏状态控制逻辑

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <title>Effective JavaScript: Frogger</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="dist/bundle.js"></script>
+<canvas width="505" height="606"></canvas>
+
+<div class="panel">
+  <a href="javascript:;" class="btn-start">开始游戏</a>
+</div>
+
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
