feature: 增加消息提醒功能

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Effective JavaScript: Frogger</title>
+  <link rel="stylesheet prefetch" href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet prefetch" href="https://cdn.bootcss.com/semantic-ui/2.2.13/semantic.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="ui error message animated bounceInDown">
+  <p></p>
+</div>
+<div class="ui positive message animated bounceInDown">
+  <p></p>
+</div>
 <canvas width="505" height="606"></canvas>
 
 <div class="panel">
