--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="lives value">
         <i class="heart icon"></i>
         <i class="heart icon"></i>
+        <i class="heart icon"></i>
       </div>
       <a class="ui green ribbon label">角色</a>
       <div class="char value">
@@ -43,15 +44,40 @@
 <div class="ui positive message animated bounceInDown">
   <p></p>
 </div>
-<div class="ui basic chars modal">
+
+<!-- begin 游戏角色更换 modal -->
+<div class="ui char-change modal">
   <i class="close icon"></i>
   <div class="header">
     更换角色
   </div>
-  <div class="image content">
+  <div class="image content"></div>
+</div>
+<!-- end 游戏角色更换 modal -->
 
+<!-- begin 游戏结束 modal -->
+<div class="ui game-over modal">
+  <div class="header center">
+    游戏结束
+  </div>
+  <div class="content">
+    <div class="ui relaxed divided list">
+      <div class="item">
+        <p>用时：<span class="value time"></span></p>
+      </div>
+      <div class="item">
+        <p>得分：<span class="value score"></span></p>
+      </div>
+    </div>
+  </div>
+  <div class="actions">
+    <div class="ui green ok inverted button">
+      <i class="checkmark icon"></i>
+      再玩一局
+    </div>
   </div>
 </div>
+<!-- end 游戏结束 modal -->
 
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/moment.js/2.19.0/moment.min.js"></script>
